fix: close icon and pin icon not properly aligned

--- a/src/styles/brackets.less
+++ b/src/styles/brackets.less
@@ -1425,7 +1425,7 @@ a, img {
         display: block;
         height: 16px;
         line-height: 15px;
-        margin-left: 18px;
+        margin-left: 21px;
         padding: 3px 0 3px 0;
 
         cursor: default;
@@ -1601,39 +1601,27 @@ a, img {
 }
 
 .file-status-icon {
-    margin: 0 0 0 8px;
     position: absolute;
-    left: 0;
-    top: 0;
+    left: 8px;
+    top: 3px;
+    width: 16px;
+    height: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 11px;
+    color: rgba(255, 255, 255, 0.5);
 
-    &.can-close:before,
-    &.pinned:before {
-        .unicode-icon-container;
-        color: rgba(255, 255, 255, 0.5);
-    }
-
-    &.can-close:before {
-        content: "\00D7";
-        line-height: 1.1em;
-    }
-
-    &.can-close:hover:before {
+    &:hover {
         color: rgba(255, 255, 255, 0.7);
     }
 
-    &.can-close:active:before {
+    &:active {
         color: rgba(255, 255, 255, 0.3);
     }
 
-    &.pinned:before {
-        content: "\f08d";
-        font-family: "Font Awesome 6 Free";
-        font-weight: 900;
+    &.pinned {
         font-size: 9px;
-    }
-
-    &.pinned:hover:before {
-        color: rgba(255, 255, 255, 0.7);
     }
 }
 
